--- a/dashboard.html
+++ b/dashboard.html
@@ -22,8 +22,10 @@
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item"><a href="#" class="nav-link active"><i class="bi bi-grid-1x2 me-2"></i> Dashboard</a></li>
-            <li><a href="#" class="nav-link"><i class="bi bi-chat-dots me-2"></i> My Complaints</a></li>
+            <li><a href="#" class="nav-link "><i class="bi bi-chat-dots me-2"></i> My Complaints</a></li>
             <li><a href="#" class="nav-link"><i class="bi bi-file-earmark-pdf me-2"></i> Documents</a></li>
+            <li><a href="#" class="nav-link"><i class="bi bi-broadcast me-2"></i> Broadcast Channel</a></li>
+            <li><a href="#" class="nav-link"><i class="bi bi-gear me-2"></i> Settings</a></li>
         </ul>
         <hr>
         <button id="logoutBtn" class="btn btn-outline-light w-100">Sign Out</button>
@@ -45,14 +47,30 @@
             
             <div class="row g-4">
                 <div class="col-md-4">
-                    <div class="card p-4 shadow-sm h-100 text-center">
+                    <div class="card p-4 shadow-sm text-center" style="height: 210px; top:5px; bottom: 20px;">
                         <i class="bi bi-plus-circle text-primary fs-1 mb-2"></i>
                         <h5>Submit Complaint</h5>
-                        <p class="small text-muted">Report potholes or water issues.</p>
+                        <p class="small text-muted">Report local issues!</p>
                         <button class="btn btn-primary mt-auto">Create New</button>
                     </div>
+                    <div class="card p-4 shadow-sm" style="height: 200px; top: 20px;">
+                        <h5 class="mb-3">Quick Actions</h5>
+                        <button class="btn btn-primary me-2" style="top: 10px; bottom:20px; position:relative">No Water</button>
+                        <button class="btn btn-warning me-2" style="top: 10px; padding: 8px 12px;">No Electricity</button>
+                        <button class="btn btn-danger me-2" style="top: 10px; padding: 8px 12px;">Road Damage</button>
+                    </div>
                 </div>
+                <div class="col-md-4" >
+                    <div class="card p-4 shadow-sm h-100 text-center" style="height: 210px; top:5px; bottom: 20px;">
+                        <i class="bi bi-chat-dots fs-1 mb-2"></i>
+                        <h5>My Complaints</h5>
+                        <img src="complain.jpeg" alt="Complaints   " class="img-fluid my-2" style="max-height: 150px;">
+                        <p class="small text-muted">Track the status of your reports.</p>
+                        <button class="btn btn-primary mt-auto">View Complaints</button>
+                    </div>
                 </div>
+            </div>
+
         </div>
     </div>
 </div>
