--- a/Broadcast.html
+++ b/Broadcast.html
@@ -63,27 +63,21 @@ body {
     <div class="row">
 
         <!-- Sidebar -->
-        <div class="col-md-2 sidebar text-white p-3">
-            <h4 class="text-white">CivicSewa</h4>
-            <hr class="text-white">
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">My Complaints</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Documents</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Broadcast Channel</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Settings</a>
-                </li>
-            </ul>
-        </div>
+<div class="d-flex">
+    <div id="sidebar" class="d-flex flex-column p-3">
+        <h3 class="p-3 fw-bold">CivicSewa</h3>
+        <hr>
+        <ul class="nav nav-pills flex-column mb-auto">
+            <li class="nav-item"><a href="#" class="nav-link active"><i class="bi bi-grid-1x2 me-2"></i> Dashboard</a></li>
+            <li><a href="#" class="nav-link "><i class="bi bi-chat-dots me-2"></i> My Complaints</a></li>
+            <li><a href="#" class="nav-link"><i class="bi bi-file-earmark-pdf me-2"></i> Documents</a></li>
+            <li><a href="#" class="nav-link"><i class="bi bi-broadcast me-2"></i> Broadcast Channel</a></li>
+            <li><a href="#" class="nav-link"><i class="bi bi-gear me-2"></i> Settings</a></li>
+        </ul>
+        <hr>
+        <button id="logoutBtn" class="btn btn-outline-light w-100">Sign Out</button>
+    </div>
+
 
         <!-- Main Content -->
         <div class="col-md-10 p-0">
