--- a/dashboard.html
+++ b/dashboard.html
@@ -12,12 +12,24 @@
         .nav-link.active { background: rgba(255,255,255,0.2); color: white; }
         .card { border: none; border-radius: 12px; transition: 0.3s; }
         .card:hover { transform: translateY(-5px); }
+        .gradient-custom-1 {
+        background: #6a11cb;
+        background: linear-gradient(to right, rgb(0, 0, 0), rgb(21, 20, 80))
+        }
+        .gradient-custom-2 {
+        background: #30cfd0;
+
+        background: -webkit-linear-gradient(to right, rgba(48,207,208,1), rgba(51,8,103,1));
+
+        background: linear-gradient(to right, rgb(76, 96, 164), rgb(27, 0, 90))
+}
+
     </style>
 </head>
 <body>
 
 <div class="d-flex">
-    <div id="sidebar" class="d-flex flex-column p-3">
+    <div id="sidebar" class="d-flex flex-column p-3 gradient-custom-1" >
         <h3 class="p-3 fw-bold">CivicSewa</h3>
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
@@ -42,7 +54,7 @@
             </div>
         </nav>
 
-        <div class="container-fluid px-4">
+        <div class="container-fluid px-5 gradient-custom-2", style="background-color: rgb(6, 1, 77); color: white; min-height: 100vh; padding: 40px 20px;">
             <h2 class="mb-4">Welcome, <span id="uNameMain">Citizen</span></h2>
             
             <div class="row g-4">
@@ -53,11 +65,11 @@
                         <p class="small text-muted">Report local issues!</p>
                         <button class="btn btn-primary mt-auto">Create New</button>
                     </div>
-                    <div class="card p-4 shadow-sm" style="height: 200px; top: 20px;">
+                    <div class="card p-4 shadow-sm" style="height: 250px; top: 20px;">
                         <h5 class="mb-3">Quick Actions</h5>
-                        <button class="btn btn-primary me-2" style="top: 10px; bottom:20px; position:relative">No Water</button>
-                        <button class="btn btn-warning me-2" style="top: 10px; padding: 8px 12px;">No Electricity</button>
-                        <button class="btn btn-danger me-2" style="top: 10px; padding: 8px 12px;">Road Damage</button>
+                        <button class="btn btn-primary w-100 mb-2" style="padding: 8px 12px; position: relative;">No Water</button>
+                        <button class="btn btn-warning w-100 mb-2" style="padding: 8px 12px; position: relative;">No Electricity</button>
+                        <button class="btn btn-danger w-100" style="padding: 8px 12px; position: relative;">Road Damage</button>
                     </div>
                 </div>
                 <div class="col-md-4" >
