--- a/Broadcast.html
+++ b/Broadcast.html
@@ -7,89 +7,58 @@
 
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
 <style>
-body {
-    background-color: #eef1f6;
-}
-
-/* Sidebar */
-.sidebar {
-    min-height: 100vh;
-    background: linear-gradient(180deg, #1e3c72, #2a5298);
-}
-
-.sidebar .nav-link {
-    color: white;
-    font-size: 14px;
-}
-
-.sidebar .nav-link:hover {
-    background: rgba(255,255,255,0.1);
-    border-radius: 6px;
-}
-
-.sidebar .nav-link.active {
-    background: rgba(255,255,255,0.2);
-    border-radius: 6px;
-}
-
-/* Topbar */
-.topbar {
-    background: white;
-    padding: 15px 20px;
-    border-bottom: 1px solid #ddd;
-}
-
-/* Cards */
-.broadcast-card {
-    transition: 0.2s ease-in-out;
-}
-
-.broadcast-card:hover {
-    transform: translateY(-3px);
-}
-
-.emergency {
-    border-left: 4px solid #dc3545 !important;
-    background-color: #fff5f5;
-}
+body { background-color: #ffffff; }
+#sidebar { width: 260px; min-height: 100vh; background: #2A4B79; color: white; }
+.nav-link { color: rgba(255,255,255,0.7); border-radius: 8px; margin: 4px 15px; }
+.nav-link.active { background: rgba(255,255,255,0.2); color: white; }
+.card { border: none; border-radius: 12px; transition: 0.3s; }
+.card:hover { transform: translateY(-5px); }
+.topbar { background: #2A4B79; color: white; padding: 15px 20px; border-bottom: 1px solid rgba(255,255,255,0.1); }
+.broadcast-card { transition: 0.3s; }
+.broadcast-card:hover { transform: translateY(-5px); }
+.emergency { border-left: 4px solid #dc3545 !important; background-color: #fff5f5; }
+.gradient-custom-2 {
+            background: #30cfd0;
+            background: -webkit-linear-gradient(to right, rgba(48,207,208,1), rgba(51,8,103,1));
+            background: linear-gradient(to right, rgb(195, 213, 222), #E0F7FA);
+        }
 </style>
 </head>
 
 <body>
 
-<div class="container-fluid">
-    <div class="row">
-
-        <!-- Sidebar -->
 <div class="d-flex">
-    <div id="sidebar" class="d-flex flex-column p-3">
+    <div id="sidebar" class="d-flex flex-column p-3" style="position: fixed; height: 100vh; overflow-y: auto;">
         <h3 class="p-3 fw-bold">CivicSewa</h3>
         <hr>
-        <ul class="nav nav-pills flex-column mb-auto">
-            <li class="nav-item"><a href="#" class="nav-link active"><i class="bi bi-grid-1x2 me-2"></i> Dashboard</a></li>
+        <ul class="nav nav-pills flex-column flex-grow-1">
+            <li class="nav-item"><a href="dashboard.html" class="nav-link"><i class="bi bi-grid-1x2 me-2"></i> Dashboard</a></li>
             <li><a href="#" class="nav-link "><i class="bi bi-chat-dots me-2"></i> My Complaints</a></li>
             <li><a href="#" class="nav-link"><i class="bi bi-file-earmark-pdf me-2"></i> Documents</a></li>
-            <li><a href="#" class="nav-link"><i class="bi bi-broadcast me-2"></i> Broadcast Channel</a></li>
+            <li><a href="Broadcast.html" class="nav-link active"><i class="bi bi-broadcast me-2"></i> Broadcast Channel</a></li>
+            <li><a href="#" class="nav-link"><i class="bi bi-signpost-2 me-2"></i> Road </a></li>
             <li><a href="#" class="nav-link"><i class="bi bi-gear me-2"></i> Settings</a></li>
         </ul>
         <hr>
         <button id="logoutBtn" class="btn btn-outline-light w-100">Sign Out</button>
     </div>
 
-
-        <!-- Main Content -->
-        <div class="col-md-10 p-0">
-
-            <!-- Topbar -->
-            <div class="topbar d-flex justify-content-between align-items-center">
-                <input type="text" class="form-control w-25" placeholder="Search content...">
-                <div class="badge bg-light text-dark p-2">Ward 5 | English</div>
+    <div class="flex-grow-1 d-flex flex-column" style="background-color:#2A4B79;color: white; min-height: 100vh; margin-left: 260px;">
+        <nav class="navbar navbar-expand shadow-sm p-3">
+            <div class="container-fluid">
+                <input type="text" class="form-control w-25" placeholder="Search...">
+                <div class="ms-auto d-flex align-items-center">
+                    <span class="badge bg-primary me-3" id="uWard">Ward --</span>
+                    <strong id="uNameTop">User Name</strong>
+                </div>
             </div>
+        </nav>
 
-            <!-- Content Area -->
-            <div class="p-4">
+        <!-- Content Area -->
+            <div class="p-4 gradient-custom-2" style="color: rgb(0, 15, 84); min-height: 100vh;">
 
                 <!-- Header Card -->
                 <div class="card shadow-sm mb-4">
@@ -145,12 +114,10 @@ body {
                     </div>
 
                 </div>
-
             </div>
         </div>
 
     </div>
-</div>
 
 </body>
 </html>
