--- a/dashboard.html
+++ b/dashboard.html
@@ -28,11 +28,11 @@
         <h3 class="p-3 fw-bold">CivicSewa</h3>
         <hr>
         <ul class="nav nav-pills flex-column flex-grow-1" style="color:#2A4B79">
-            <li class="nav-item"><a href="#" class="nav-link active"><i class="bi bi-grid-1x2 me-2"></i> Dashboard</a></li>
+            <li class="nav-item"><a href="dashboard.html" class="nav-link active"><i class="bi bi-grid-1x2 me-2"></i> Dashboard</a></li>
             <li><a href="#" class="nav-link "><i class="bi bi-chat-dots me-2"></i> My Complaints</a></li>
-            <li><a href="#" class="nav-link"><i class="bi bi-file-earmark-pdf me-2"></i> Documents</a></li>
-            <li><a href="#" class="nav-link"><i class="bi bi-broadcast me-2"></i> Broadcast Channel</a></li>
-            <li><a href="#" class="nav-link"><i class="bi bi-broadcast me-2"></i> Road </a></li>
+            <li><a href="my-complaints.html" class="nav-link"><i class="bi bi-file-earmark-pdf me-2"></i> Documents</a></li>
+            <li><a href="Broadcast.html" class="nav-link"><i class="bi bi-broadcast me-2"></i> Broadcast Channel</a></li>
+            <li><a href="#" class="nav-link"><i class="bi bi-signpost-2 me-2"></i> Road </a></li>
             <li><a href="#" class="nav-link"><i class="bi bi-gear me-2"></i> Settings</a></li>
         </ul>
         <hr>
@@ -59,7 +59,7 @@
                         <i class="bi bi-plus-circle text-primary fs-1 mb-2"></i>
                         <h5>Submit Complaint</h5>
                         <p class="small text-muted">Report local issues!</p>
-                        <button class="btn btn-primary mt-auto">Create New</button>
+                        <button class="btn btn-primary mt-auto" data-bs-toggle="modal" data-bs-target="#complaintModal">Create New</button>
                     </div>
                     <div class="card p-4 shadow-sm" style="height: 250px; top: 20px;">
                         <h5 class="mb-3">Quick Actions</h5>
@@ -127,6 +127,49 @@
                 </div>
             </div>
 
+        </div>
+    </div>
+</div>
+
+<!-- Complaint Modal -->
+<div class="modal fade" id="complaintModal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Submit Complaint</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <form id="complaintForm">
+                    <div class="mb-3">
+                        <label class="form-label">Complaint Category</label>
+                        <select id="category" class="form-select" required>
+                            <option value="">Select Category</option>
+                            <option value="Water">No Water</option>
+                            <option value="Electricity">No Electricity</option>
+                            <option value="Road">Road Damage</option>
+                            <option value="Waste">Garbage Collection</option>
+                            <option value="Other">Other</option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Title</label>
+                        <input type="text" id="title" class="form-control" placeholder="Brief description" required>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Description</label>
+                        <textarea id="description" class="form-control" rows="4" placeholder="Detailed description" required></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Location</label>
+                        <input type="text" id="location" class="form-control" placeholder="Where is the issue?" required>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="submitComplaintBtn">Submit Complaint</button>
+            </div>
         </div>
     </div>
 </div>
