--- a/dashboard.html
+++ b/dashboard.html
@@ -29,8 +29,8 @@
         <hr>
         <ul class="nav nav-pills flex-column flex-grow-1" style="color:#2A4B79">
             <li class="nav-item"><a href="dashboard.html" class="nav-link active"><i class="bi bi-grid-1x2 me-2"></i> Dashboard</a></li>
-            <li><a href="#" class="nav-link "><i class="bi bi-chat-dots me-2"></i> My Complaints</a></li>
-            <li><a href="my-complaints.html" class="nav-link"><i class="bi bi-file-earmark-pdf me-2"></i> Documents</a></li>
+            <li><a href="my-complaints.html" class="nav-link"><i class="bi bi-chat-dots me-2"></i> My Complaints</a></li>
+            <li><a href="#" class="nav-link"><i class="bi bi-file-earmark-pdf me-2"></i> Documents</a></li>
             <li><a href="Broadcast.html" class="nav-link"><i class="bi bi-broadcast me-2"></i> Broadcast Channel</a></li>
             <li><a href="#" class="nav-link"><i class="bi bi-signpost-2 me-2"></i> Road </a></li>
             <li><a href="#" class="nav-link"><i class="bi bi-gear me-2"></i> Settings</a></li>
