recent commit for day 2

--- a/Broadcast.html
+++ b/Broadcast.html
@@ -40,7 +40,7 @@ body { background-color: #ffffff; }
             <li><a href="#" class="nav-link"><i class="bi bi-file-earmark-pdf me-2"></i> Documents</a></li>
             <li><a href="Broadcast.html" class="nav-link active"><i class="bi bi-broadcast me-2"></i> Broadcast Channel</a></li>
             <li><a href="#" class="nav-link"><i class="bi bi-signpost-2 me-2"></i> Road </a></li>
-            <li><a href="#" class="nav-link"><i class="bi bi-gear me-2"></i> Settings</a></li>
+            <li><a href="settings.html" class="nav-link"><i class="bi bi-gear me-2"></i> Settings</a></li>
         </ul>
         <hr>
         <button id="logoutBtn" class="btn btn-outline-light w-100">Sign Out</button>
