--- a/my-complaints.html
+++ b/my-complaints.html
@@ -5,6 +5,7 @@
     <title>CivicSewa - Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         body { background-color: #f0f2f5; }
         #sidebar { width: 260px; min-height: 100vh; background: #2A4B79; color: white; }
@@ -53,13 +54,53 @@
         <div class="container-fluid px-5 gradient-custom-2" style="background-color: #c5c5c5; color: rgb(0, 15, 84); min-height: 100vh; padding: 20px;">
             <h2 class="mb-4">My Complaints - <span id="uNameMain">Citizen</span></h2>
             
-            <div id="complaintsContainer" class="row g-3">
+            <!-- Complaint Form Section -->
+            <div class="card p-4 shadow-sm mb-4 border-0">
+                <h4 class="mb-3"><i class="bi bi-plus-circle text-primary me-2"></i>Submit a New Complaint</h4>
+                <form id="complaintForm">
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label for="complaintTitle" class="form-label fw-bold">Title *</label>
+                            <input type="text" class="form-control" id="complaintTitle" placeholder="Brief title of the complaint" required>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="complaintCategory" class="form-label fw-bold">Category *</label>
+                            <select class="form-control" id="complaintCategory" required>
+                                <option value="">Select Category</option>
+                                <option value="Road Damage">Road Damage</option>
+                                <option value="Water Supply">Water Supply</option>
+                                <option value="Electricity">Electricity</option>
+                                <option value="Sanitation">Sanitation</option>
+                                <option value="Other">Other</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="complaintLocation" class="form-label fw-bold">Location *</label>
+                        <input type="text" class="form-control" id="complaintLocation" placeholder="Where is the issue located?" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="complaintDescription" class="form-label fw-bold">Description *</label>
+                        <textarea class="form-control" id="complaintDescription" rows="4" placeholder="Describe the issue in detail..." required></textarea>
+                    </div>
+                    <div>
+                        <button type="button" class="btn btn-primary btn-lg" id="submitComplaintBtn">
+                            <i class="bi bi-check-circle me-2"></i>Submit Complaint
+                        </button>
+                        <button type="reset" class="btn btn-outline-secondary btn-lg ms-2">Clear Form</button>
+                    </div>
+                </form>
+            </div>
+
+            <!-- Complaints List Section -->
+            <h3 class="mt-5 mb-3">Your Submitted Complaints</h3>
+            <div id="complaintsList" class="mt-4">
                 
             </div>
         </div>
     </div>
 </div>
 
-<script type="module" src="my-complaints.js"></script>
+<script type="module" src="my-complaints-CLEAN.js"></script>
 </body>
 </html>
