--- a/login.html
+++ b/login.html
@@ -28,8 +28,23 @@
                     <input type="email" id="regEmail" class="form-control mb-2" placeholder="Email">
                     <input type="password" id="regPass" class="form-control mb-3" placeholder="Password">
                     <button id="registerBtn" class="btn btn-success w-100">Create Account</button>
-
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Email Verification Modal -->
+<div class="modal fade" id="verificationModal" tabindex="-1" backdrop="static" keyboard="false">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Email Verification</h5>
+            </div>
+            <div class="modal-body">
+                <p>A verification link has been sent to <strong id="verifyEmail"></strong></p>
+                <p>Please click the link in your email to verify your account before logging in.</p>
+                <button id="resendBtn" class="btn btn-secondary">Resend Verification Email</button>
             </div>
         </div>
     </div>
