--- a/my-complaints.html
+++ b/my-complaints.html
@@ -101,6 +101,6 @@
     </div>
 </div>
 
-<script type="module" src="my-complaints-CLEAN.js"></script>
+<script type="module" src="my-complaints-v2.js"></script>
 </body>
 </html>
