--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,7 @@
     <title>CivicSewa - Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="Color_mode.css">
     <style>
         body { background-color: #f0f2f5; }
         #sidebar { width: 260px; min-height: 100vh; background: #2A4B79; color: white; }
@@ -46,7 +47,10 @@
                 <div class="ms-auto d-flex align-items-center">
                     <span class="badge bg-primary me-3" id="uWard">Ward --</span>
                     <strong id="uNameTop">User Name</strong>
+                    <button id="themeToggle" class="theme-toggle">🌙</button>
+
                 </div>
+                
             </div>
         </nav>
 
