--- a/documents.html
+++ b/documents.html
@@ -366,6 +366,7 @@
             background: linear-gradient(135deg, #3498DB 0%, #5DADE2 100%);
         }
     </style>
+    <link rel="stylesheet" href="Color_mode.css">
 </head>
 <body>
 <div class="d-flex">
@@ -387,7 +388,8 @@
     <div class="flex-grow-1 d-flex flex-column" style="background: linear-gradient(135deg, #2C3E50 0%, #34495E 50%, #2C5F7F 100%); color: white; min-height: 100vh; margin-left: 260px;">
         <nav class="navbar navbar-expand shadow-sm p-3" style="background: linear-gradient(90deg, rgba(44,62,80,0.95) 0%, rgba(52,73,94,0.95) 100%) !important;">
             <div class="container-fluid">
-                <input type="text" class="form-control w-25" placeholder="🔍 Search documents...">
+                <button id="themeToggle" class="theme-toggle">🌙</button>
+                <input type="text" class="form-control w-25" placeholder="Search documents...">
                 <div class="ms-auto d-flex align-items-center" style="gap: 20px;">
                     <span class="badge" id="uWard">Ward --</span>
                     <strong id="uNameTop" style="font-size: 1.05rem; letter-spacing: 0.5px;">User Name</strong>
@@ -683,5 +685,27 @@
     });
 })();
 </script>
+<script>
+const toggle = document.getElementById("themeToggle");
+
+// Apply saved theme
+if (localStorage.getItem("theme") === "dark") {
+  document.body.classList.add("dark");
+  toggle.textContent = "☀️";
+}
+
+toggle.addEventListener("click", () => {
+  document.body.classList.toggle("dark");
+
+  if (document.body.classList.contains("dark")) {
+    localStorage.setItem("theme", "dark");
+    toggle.textContent = "☀️";
+  } else {
+    localStorage.setItem("theme", "light");
+    toggle.textContent = "🌙";
+  }
+});
+</script>
+
 </body>
 </html>
