--- a/settings.html
+++ b/settings.html
@@ -5,6 +5,8 @@
     <title>CivicSewa - Settings</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="Color_mode.css">
+
     <style>
         body { background-color: #f0f2f5; }
         #sidebar { width: 260px; min-height: 100vh; background: #2A4B79; color: white; }
@@ -113,6 +115,7 @@
         </div>
     </div>
 </div>
+
 
 <script type="module" src="settings.js"></script>
 </body>
