--- a/signup.html
+++ b/signup.html
@@ -230,4 +230,8 @@ if(localStorage.getItem("theme")==="dark"){
   </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script type="module" src="auth-check.js"></script>
+</body>
 </html>
+
