--- a/dashboard.html
+++ b/dashboard.html
@@ -47,8 +47,6 @@
                 <div class="ms-auto d-flex align-items-center">
                     <span class="badge bg-primary me-3" id="uWard">Ward --</span>
                     <strong id="uNameTop">User Name</strong>
-                    <button id="themeToggle" class="theme-toggle">🌙</button>
-
                 </div>
                 
             </div>
@@ -63,7 +61,7 @@
                         <i class="bi bi-plus-circle text-primary fs-1 mb-2"></i>
                         <h5>Submit Complaint</h5>
                         <p class="small text-muted">Report local issues!</p>
-                        <button class="btn btn-primary mt-auto" data-bs-toggle="modal" data-bs-target="#complaintModal">Create New</button>
+                        <button class="btn btn-primary mt-auto" data-bs-toggle="modal" href="my-complaints.html">Create New</button>
                     </div>
                     <div class="card p-4 shadow-sm" style="height: 250px; top: 20px;">
                         <h5 class="mb-3">Quick Actions</h5>
