--- a/dashboard.html
+++ b/dashboard.html
@@ -61,13 +61,18 @@
                         <i class="bi bi-plus-circle text-primary fs-1 mb-2"></i>
                         <h5>Submit Complaint</h5>
                         <p class="small text-muted">Report local issues!</p>
-                        <button class="btn btn-primary mt-auto" data-bs-toggle="modal" href="my-complaints.html">Create New</button>
+                            <button class="btn btn-primary"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#complaintModal">
+                            Create New
+                            </button>
                     </div>
                     <div class="card p-4 shadow-sm" style="height: 250px; top: 20px;">
                         <h5 class="mb-3">Quick Actions</h5>
-                        <button class="btn btn-primary w-100 mb-2" style="padding: 8px 12px; position: relative;">No Water</button>
-                        <button class="btn btn-warning w-100 mb-2" style="padding: 8px 12px; position: relative;">No Electricity</button>
-                        <button class="btn btn-danger w-100" style="padding: 8px 12px; position: relative;">Road Damage</button>
+                        <button id="quickWater" class="btn btn-primary w-100 mb-2">No Water</button>
+                        <button id="quickElectric" class="btn btn-warning w-100 mb-2">No Electricity</button>
+                        <button id="quickRoad" class="btn btn-danger w-100">Road Damage</button>
+
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -102,8 +107,17 @@
                                 </div>
                             </div>
                         </div>
-                        <img src="complain.jpeg" alt="Complaints" class="img-fluid my-2" style="max-height: 170px;">
-                        <button class="btn btn-primary" style="font-size: 12px; padding: 6px 12px;">View Complaint</button>
+                            <div id="latestComplaintBox" class="mt-3 text-start">
+                            <h6 id="latestTitle">No complaints yet</h6>
+                            <p class="small mb-1"><strong>Status:</strong> <span id="latestStatus">-</span></p>
+                            <p class="small mb-1"><strong>Category:</strong> <span id="latestCategory">-</span></p>
+                            <p class="small"><strong>Location:</strong> <span id="latestLocation">-</span></p>
+                            </div>
+
+                            <button id="viewComplaintBtn" class="btn btn-primary mt-2" style="font-size: 12px; padding: 6px 12px;">
+                            View Complaint
+                            </button>
+
                     </div>
                 </div>
                 <div class="col-md-5">
@@ -176,6 +190,7 @@
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script type="module" src="dashboard.js"></script>
 </body>
 </html>
