--- a/ward-broadcast.html
+++ b/ward-broadcast.html
@@ -78,8 +78,8 @@ body {
     <h3 class="p-3 fw-bold">CivicSewa</h3>
     <hr>
     <ul class="nav nav-pills flex-column flex-grow-1">
-        <li><a href="dashboard.html" class="nav-link">Dashboard</a></li>
-        <li><a href="Broadcast.html" class="nav-link active">Broadcast Channel</a></li>
+        <li><a href="ward-dashboard.html" class="nav-link">Dashboard</a></li>
+        <li><a href="ward-broadcast.html" class="nav-link active">Broadcast Channel</a></li>
     </ul>
     <hr>
     <button class="btn btn-outline-light w-100">Sign Out</button>
