--- a/chatbot.html
+++ b/chatbot.html
@@ -148,21 +148,6 @@ body{
 .icon-btn:hover{
     opacity:.9;
 }
-
-/* FAQ */
-.faq{
-    margin-bottom:10px;
-}
-
-.faq button{
-    border:none;
-    background:#eaf1ff;
-    padding:6px 12px;
-    border-radius:15px;
-    margin:4px 4px 0 0;
-    cursor:pointer;
-    font-size:13px;
-}
 </style>
 </head>
 
@@ -187,25 +172,11 @@ body{
 
 <div class="chat">
 
-<div class="faq">
-    <button onclick="quickAsk('How to apply for citizenship?')">Citizenship</button>
-    <button onclick="quickAsk('How to apply for PAN?')">PAN</button>
-    <button onclick="quickAsk('How to file complaint?')">Complaint</button>
-    <button onclick="quickAsk('Ward office hours?')">Office Hours</button>
-</div>
-
 <div class="chatbox" id="chatbox"></div>
 
 <div class="input-area">
-    <input id="userInput" placeholder="Ask anything..." onkeypress="handleEnter(event)">
-    <input type="file" id="fileInput" hidden>
-    <button class="icon-btn" onclick="document.getElementById('fileInput').click()">
-        <i class="bi bi-paperclip"></i>
-    </button>
-    <button class="icon-btn" onclick="startVoice()">
-        <i class="bi bi-mic"></i>
-    </button>
-    <button class="icon-btn" onclick="sendMessage()">
+    <input id="userInput" placeholder="Ask anything...">
+    <button class="icon-btn" id="sendBtn">
         <i class="bi bi-send"></i>
     </button>
 </div>
@@ -214,9 +185,13 @@ body{
 </div>
 </div>
 
-<script>
+<script type="module">
+
+import { model } from './chatbot.js';
 
 const chatbox = document.getElementById("chatbox");
+const userInput = document.getElementById("userInput");
+const sendBtn = document.getElementById("sendBtn");
 
 /* Load chat history */
 window.onload = ()=>{
@@ -230,10 +205,12 @@ window.onload = ()=>{
 function saveChat(){
     const messages = [];
     document.querySelectorAll(".message").forEach(m=>{
-        messages.push({
-            text:m.innerText,
-            type:m.classList.contains("user")?"user":"bot"
-        });
+        if(!m.classList.contains("typing")){
+            messages.push({
+                text:m.innerText,
+                type:m.classList.contains("user")?"user":"bot"
+            });
+        }
     });
     localStorage.setItem("chatHistory",JSON.stringify(messages));
 }
@@ -265,12 +242,11 @@ function removeTyping(){
 
 /* Send */
 async function sendMessage(){
-    const input=document.getElementById("userInput");
-    const text=input.value.trim();
+    const text=userInput.value.trim();
     if(!text) return;
 
     addMessage(text,"user");
-    input.value="";
+    userInput.value="";
     showTyping();
 
     const reply = await getAIResponse(text);
@@ -279,74 +255,30 @@ async function sendMessage(){
     addMessage(reply,"bot");
 }
 
-/* Quick FAQ */
-function quickAsk(q){
-    document.getElementById("userInput").value=q;
-    sendMessage();
-}
-
-/* Voice input */
-function startVoice(){
-    const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-    recognition.lang="en-US";
-    recognition.start();
-    recognition.onresult = e=>{
-        document.getElementById("userInput").value = e.results[0][0].transcript;
-    };
-}
-
-/* AI RESPONSE */
-
-/* ===== OPTION 1: SIMPLE BUILT-IN LOGIC ===== */
+/* AI RESPONSE using Firebase Vertex AI */
 async function getAIResponse(text){
-
-    // 🔥 IF YOU ADD REAL API, REPLACE THIS SECTION
-
-    text = text.toLowerCase();
-
-    if(text.includes("citizenship"))
-        return "To apply for citizenship, submit ward recommendation and required documents.";
-
-    if(text.includes("pan"))
-        return "You can apply for PAN via Inland Revenue Department website.";
-
-    if(text.includes("complaint"))
-        return "File complaint from My Complaints section in dashboard.";
-
-    if(text.includes("office"))
-        return "Ward office hours: 10 AM – 5 PM (Sun–Fri).";
-
-    return "I can assist with documents, complaints, government services, fees and procedures.";
+    try {
+        const result = await model.generateContent(
+            `You are CivicSewa AI assistant helping citizens of Nepal. Answer this: ${text}`
+        );
+        const response = await result.response;
+        return response.text();
+    } catch (error) {
+        console.error("Error generating content:", error);
+        return "I encountered an issue. Please check your internet connection.";
+    }
 }
-
-/* ===== OPTION 2: REAL OPENAI API (UNCOMMENT TO USE) ===== */
-/*
-async function getAIResponse(text){
-    const response = await fetch("https://api.openai.com/v1/chat/completions",{
-        method:"POST",
-        headers:{
-            "Content-Type":"application/json",
-            "Authorization":"Bearer YOUR_OPENAI_API_KEY"
-        },
-        body:JSON.stringify({
-            model:"gpt-4o-mini",
-            messages:[
-                {role:"system",content:"You are CivicSewa AI assistant helping citizens of Nepal with government services."},
-                {role:"user",content:text}
-            ]
-        })
-    });
-
-    const data = await response.json();
-    return data.choices[0].message.content;
-}
-*/
 
 function handleEnter(e){
     if(e.key==="Enter") sendMessage();
 }
 
-</script>
+// Event Listeners (This replaces the onclick in HTML)
+sendBtn.addEventListener("click", sendMessage);
+userInput.addEventListener("keypress", handleEnter);
 
+</script>
+<script type="module" src="chatbot.js"></script>
 </body>
 </html>
+2
