--- a/ward-dashboard.html
+++ b/ward-dashboard.html
@@ -354,6 +354,7 @@ new Chart(document.getElementById('pieChart'),{
 </script>
 
 <script type="module" src="ward-dashboard.js"></script>
+<script type="module" src="auth-check.js"></script>
 
 </body>
 </html>
