--- a/Broadcast.html
+++ b/Broadcast.html
@@ -36,11 +36,11 @@ body { background-color: #ffffff; }
         <h3 class="p-3 fw-bold">CivicSewa</h3>
         <hr>
         <ul class="nav nav-pills flex-column flex-grow-1" style="color:#2A4B79">
-<li class="nav-item"><a href="dashboard.html" class="nav-link active"><i class="bi bi-grid-1x2 me-2"></i> Dashboard</a></li>
+<li class="nav-item"><a href="dashboard.html" class="nav-link"><i class="bi bi-grid-1x2 me-2"></i> Dashboard</a></li>
             <li><a href="my-complaints.html" class="nav-link"><i class="bi bi-chat-dots me-2"></i> My Complaints</a></li>
             <li><a href="documents.html" class="nav-link"><i class="bi bi-file-earmark-pdf me-2"></i> Documents</a></li>
-            <li><a href="Broadcast.html" class="nav-link"><i class="bi bi-broadcast me-2"></i> Broadcast Channel</a></li>
-            <li><a href="#" class="nav-link"><i class="bi bi-signpost-2 me-2"></i> Road </a></li>
+            <li><a href="broadcast.html" class="nav-link active"><i class="bi bi-broadcast me-2"></i> Broadcast Channel</a></li>
+            <li><a href="road.html" class="nav-link"><i class="bi bi-signpost-2 me-2"></i> Road </a></li>
             <li><a href="chatbot.html" class="nav-link"><i class="bi bi bi-robot me-2"></i> Guidance Chatbot </a></li>
             <li><a href="settings.html" class="nav-link"><i class="bi bi-gear me-2"></i> Settings</a></li>
         
@@ -70,79 +70,16 @@ body { background-color: #ffffff; }
                             <h4 class="mb-1">Ward Broadcast Channel</h4>
                             <p class="text-muted mb-0">Official updates from Ward Office</p>
                         </div>
-                        <button class="btn btn-primary">Create Broadcast</button>
                     </div>
                 </div>
 
                 <!-- Broadcast Cards -->
-                <div class="row g-4">
-
-                    <!-- Normal Post -->
-                    <div class="col-md-6 col-lg-4">
-                        <div class="card broadcast-card shadow-sm">
-                            <div class="card-body">
-                                <h5 class="card-title">Water Supply Notice</h5>
-                                <p class="text-muted small">2 hours ago</p>
-                                <p class="card-text">
-                                    Water disruption in Tole-3 from 2PM to 6PM due to maintenance work.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Emergency Post -->
-                    <div class="col-md-6 col-lg-4">
-                        <div class="card broadcast-card shadow-sm emergency">
-                            <div class="card-body">
-                                <h5 class="card-title text-danger">Emergency: Road Blocked</h5>
-                                <p class="text-muted small">45 minutes ago</p>
-                                <p class="card-text">
-                                    Main street blocked due to fallen electric pole. Please avoid the area.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Normal Post -->
-                    <div class="col-md-6 col-lg-4">
-                        <div class="card broadcast-card shadow-sm">
-                            <div class="card-body">
-                                <h5 class="card-title">Garbage Collection Update</h5>
-                                <p class="text-muted small">Yesterday</p>
-                                <p class="card-text">
-                                    Garbage collection delayed by one day due to vehicle repair.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
+                <div class="row g-4"></div>
             </div>
         </div>
 
     </div>
 
-<script>
-const toggle = document.getElementById("themeToggle");
-
-// Apply saved theme
-if (localStorage.getItem("theme") === "dark") {
-  document.body.classList.add("dark");
-  toggle.textContent = "☀️";
-}
-
-toggle.addEventListener("click", () => {
-  document.body.classList.toggle("dark");
-
-  if (document.body.classList.contains("dark")) {
-    localStorage.setItem("theme", "dark");
-    toggle.textContent = "☀️";
-  } else {
-    localStorage.setItem("theme", "light");
-    toggle.textContent = "🌙";
-  }
-});
-</script>
-
+    <script type="module" src="broadcast.js"></script>
 </body>
 </html>
