--- a/road.html
+++ b/road.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pls send help - Road & Issue Map</title>
+    <title>CivicSewa - Road & Issue Map</title>
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -377,7 +377,7 @@
     <div class="d-flex">
         <!-- Sidebar -->
         <div id="sidebar" class="d-flex flex-column p-3">
-            <h3 class="p-3 fw-bold"><i class="bi bi-map-fill me-2"></i>Pls send help</h3>
+            <h3 class="p-3 fw-bold"><img src="CivicSewa_Logo_Colorized-removebg-preview.png" style="width: 65.78px; height: 65.78px;">CivicSewa</h3>
             <hr>
             <ul class="nav nav-pills flex-column flex-grow-1">
                 <li class="nav-item">
@@ -387,16 +387,19 @@
                     <a href="my-complaints.html" class="nav-link"><i class="bi bi-chat-dots me-2"></i> My Complaints</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link"><i class="bi bi-file-earmark-pdf me-2"></i> Documents</a>
+                    <a href="documents.html" class="nav-link"><i class="bi bi-file-earmark-pdf me-2"></i> Documents</a>
                 </li>
                 <li>
-                    <a href="Broadcast.html" class="nav-link"><i class="bi bi-broadcast me-2"></i> Broadcast Channel</a>
+                    <a href="broadcast.html" class="nav-link"><i class="bi bi-broadcast me-2"></i> Broadcast Channel</a>
                 </li>
                 <li>
                     <a href="road.html" class="nav-link active"><i class="bi bi-signpost-2 me-2"></i> Road Map</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link"><i class="bi bi-gear me-2"></i> Settings</a>
+                    <a href="chatbot.html" class="nav-link"><i class="bi bi-gear me-2"></i> Guidance Chatbot</a>
+                </li>
+                <li>
+                    <a href="settings.html" class="nav-link"><i class="bi bi-gear me-2"></i> Settings</a>
                 </li>
             </ul>
             <hr>
